# CloudWAF-command-line-tool

./: README.md  cwafctl.py  pyproject.toml  requirements.txt  settings.py
src/cwafctl/: cwafctl.py
yaml files/: ProtocolSecurity.yaml  TrueClientIP.yaml  accessRules.yaml  allowedUrls.yaml  anonProxy.yaml  apps.yaml  botmgr.yaml  botmgr_app.yaml  certificate.yaml  certificates.yaml  customerInfo.yaml  databaseProtection.yaml  generalinfo.yaml  hackmebank.yaml  hacmebank_v2.yaml  ipPersistency.yaml  juiceshop.yaml  maindomain.yaml  newapp.yaml  originServers_LB.yaml  originservers_failover.yaml  protocolsandhealthchecks.yaml  securityBypass.yaml  securitypage.yaml  vulnerabilitiesProtection.yaml  vulnerabiltiesProtection.yaml
